1. Since the upper settings uses the GET method, changing the upper settings resets the data in the lower section to the default values.

--- a/matching_assignment_app/templates/matching_assignment_app/resource_skill_matching_demo.html
+++ b/matching_assignment_app/templates/matching_assignment_app/resource_skill_matching_demo.html
@@ -54,6 +54,7 @@
                 {% endfor %}
             </select>
         </div>
+        (인원 수나 프로젝트 수를 변경하면 작업 정보가 초기화 됩니다.)
         <noscript><button type="submit" class="btn btn-sm btn-secondary">설정 적용</button></noscript>
     </form>
 
