--- a/resource_allocation_app/templates/resource_allocation_app/budget_allocation_demo.html
+++ b/resource_allocation_app/templates/resource_allocation_app/budget_allocation_demo.html
@@ -53,6 +53,7 @@
                     <option value="{{ i }}" {% if i == submitted_num_items %}selected{% endif %}>{{ i }}개</option>
                 {% endfor %}
             </select>
+            (투자 항목 수를 변경하면 작업 정보가 초기화 됩니다.)
         </div>
          <noscript><button type="submit" class="btn btn-sm btn-secondary">항목 수 변경</button></noscript>
     </form>
