--- a/routing_logistics_app/templates/routing_logistics_app/cvrp_demo.html
+++ b/routing_logistics_app/templates/routing_logistics_app/cvrp_demo.html
@@ -70,6 +70,7 @@
                 {% endfor %}
             </select>
         </div>
+        (고객 수나 차량 수 또는 차량 용량을 변경하면 작업 정보가 초기화 됩니다.)
         <noscript><button type="submit" class="btn btn-sm btn-secondary">설정 적용</button></noscript>
     </form>
 
