--- a/matching_assignment_app/templates/matching_assignment_app/transport_assignment_demo.html
+++ b/matching_assignment_app/templates/matching_assignment_app/transport_assignment_demo.html
@@ -42,6 +42,7 @@
                 {% endfor %}
             </select>
         </div>
+        (기사/구역 수를 변경하면 작업 정보가 초기화 됩니다.)
         <noscript><button type="submit" class="btn btn-sm btn-secondary">설정 적용</button></noscript>
     </form>
 
