--- a/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_demo.html
+++ b/resource_allocation_app/templates/resource_allocation_app/data_center_capacity_demo.html
@@ -63,6 +63,7 @@
                     <option value="{{ i }}" {% if i == submitted_num_server_types %}selected{% endif %}>{{ i }}개</option>
                 {% endfor %}
             </select>
+            (서버 수나 서비스 수를 변경하면 작업 정보가 초기화 됩니다.)
         </div>
         <div class="form-group mr-2">
             <label for="num_services_to_show" class="mr-2">서비스 종류 수 (1-3):</label>
