--- a/routing_logistics_app/templates/routing_logistics_app/vrp_demo.html
+++ b/routing_logistics_app/templates/routing_logistics_app/vrp_demo.html
@@ -60,6 +60,7 @@
                     <option value="{{ i }}" {% if i == submitted_num_customers %}selected{% endif %}>{{ i }}명</option>
                 {% endfor %}
             </select>
+            (고객 수나 차량 수를 변경하면 작업 정보가 초기화 됩니다.)
         </div>
         <div class="form-group mr-2">
             <label for="num_vehicles_to_show" class="mr-2">차량 수 (1-5):</label>
